examples/test/testpolicy5555.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5555
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key34: value27
      key17: value13
      key0: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value21
      podSelector:
        matchLabels:
          key48: value44
          key28: value25
          key10: value20
